--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "cypress open",
+    "server": "start-server-and-test dev 3000 test"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.2",
+    "cypress": "^9.5.4",
     "mongoose": "^6.3.1",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-csv": "^2.2.2",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "start-server-and-test": "^1.14.0"
   },
   "devDependencies": {
     "eslint": "8.14.0",
